k3s/botenoal/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: botenoal
  namespace: bots
  labels:
    app: botenoal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: botenoal
  template:
    metadata:
      labels:
        app: botenoal
    spec:
      imagePullSecrets:
        - name: regcred-botenoal
      containers:
        - name: botenoal
          image: ghcr.io/enoal-fauchille-bolle/botenoal:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
