k3s/botenoal/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: botenoal-ingress
  namespace: bots
spec:
  rules:
    - host: botenoal.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: botenoal-svc
                port:
                  number: 80
